@@ -62,6 +62,7 @@ bool Logger::_useColor(true);
 bool Logger::_useLocalTime(false);
 bool Logger::_keepLogRotate(false);
 bool Logger::_useMicrotime(false);
+bool Logger::_logFullUrl(true);
 bool Logger::_showRole(false);
 char Logger::_role('\0');
 std::string Logger::_outputPrefix("");
@@ -245,6 +246,16 @@ void Logger::setKeepLogrotate(bool keep) {
   }
 
   _keepLogRotate = keep;
+}
+
+// NOTE: this function should not be called if the logging is active.
+void Logger::setLogFullUrl(bool log) {
+  if (_active) {
+    THROW_ARANGO_EXCEPTION_MESSAGE(TRI_ERROR_INTERNAL,
+                                   "cannot change keep log rotate if logging is active");
+  }
+
+  _logFullUrl = log;
 }
 
 std::string const& Logger::translateLogLevel(LogLevel level) {
